--- a/index.html
+++ b/index.html
@@ -8,20 +8,56 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
         <h1>Welcome to My Personal Website</h1>
     </header>
-    <section>
-        <h2>About Me</h2>
-        <p>Hello! My name is Nicholas Hendryson, and I'm a Student.</p>
-    </section>
-    <section>
-        <h2>Portfolio</h2>
-        <p>Here are some of my projects:</p>
-        <!-- Add project details here -->
-    </section>
-    <section>
-        <h2>Contact</h2>
-        <p>You can reach me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
-    </section>
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>This is the home section of my personal website.</p>
+        </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! My name is [Your Name], and I'm a [Your Profession].</p>
+        </section>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <p>Here are some of my projects:</p>
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="project1.jpg" alt="Project 1">
+                    <p>Project 1 Description</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="project2.jpg" alt="Project 2">
+                    <p>Project 2 Description</p>
+                </div>
+                <!-- Add more projects as needed -->
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>You can reach me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+            <form action="https://formspree.io/f/yourformid" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+    </footer>
 </body>
 </html>
